Bug 413104 - Left-click mouse actions on Desktop don't work in Desktop layout, works fine in Folderview
Summary: Left-click mouse actions on Desktop don't work in Desktop layout, works fine ...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Containment (other bugs)
Version First Reported In: 5.17.0
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Sebastian Kügler
URL:
Keywords: regression
: 418315 423217 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-10-17 18:00 UTC by Wolfgang Bauer
Modified: 2022-09-23 23:30 UTC (History)
16 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.26
Sentry Crash Report:


Attachments
Quick hack (576 bytes, patch)
2020-01-04 07:22 UTC, Franz Trischberger
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Wolfgang Bauer 2019-10-17 18:00:10 UTC
SUMMARY
If I set up a left-click mouse action, it doesn't work when using the "Desktop" layout.
When switching to Folderview, it works fine.

STEPS TO REPRODUCE
1. Right-click on the desktop, choose "Configure Desktop", setup a mouse action for left-click (e.g. Application launcher) and press OK
2. Left-click on some empty space on the desktop

OBSERVED RESULT
Nothing happens.

EXPECTED RESULT
The application launcher should appear.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: openSUSE Leap 15.1
(available in About System)
KDE Plasma Version: 5.17.0
KDE Frameworks Version: 5.63.0
Qt Version: 5.13.1

ADDITIONAL INFORMATION
Only happens when the layout is set to "Desktop". With "Folderview" it works fine.
Comment 1 Wolfgang Bauer 2019-10-17 18:02:29 UTC
PS: other actions do work fine with "Desktop" layout, e.g. right-click or mouse wheel.
Comment 2 David Edmundson 2019-10-18 01:16:38 UTC
Weirder part is how FolderView works.

https://phabricator.kde.org/D24748
Comment 3 Pit 2019-10-27 19:36:32 UTC
Just wanted to add that this is *really* annoying.
Right now I'm locked out from changing desktop settings:  I had the desktop toolbox disabled, used the right click to access the menu.
As application launcher (which I had on left MB) is my central usage interface I moved it (temporarily, I thought) to RMB.  This works, but now I cannot access the plasma menu anymore....  Can't find any way of launching it (and fixing the bug won't help me on this either).....
Comment 4 Wolfgang Bauer 2019-10-28 18:16:26 UTC
(In reply to Pit from comment #3)
> Right now I'm locked out from changing desktop settings:  I had the desktop
> toolbox disabled, used the right click to access the menu.
> As application launcher (which I had on left MB) is my central usage
> interface I moved it (temporarily, I thought) to RMB.  This works, but now I
> cannot access the plasma menu anymore....  Can't find any way of launching
> it (and fixing the bug won't help me on this either).....

Yeah, that's exactly the reason why there was no official way to remove the toolbox button for a long time...

I suppose the only way to fix this "mess" is editing ~/.config/plasma-org.kde.plasma.desktop-appletsrc manually.
Open the file in a text editor and change the "RightButton" setting to this:
RightButton;NoModifier=org.kde.contextmenu
(that line should be right at the beginning, but better search for RightButton through the whole file, I think there is one for each activity)

Creating a new activity might help too, I don't think it will take over the actions from the current one, but rather use the defaults.
Comment 5 Franz Trischberger 2020-01-04 07:22:53 UTC
Created attachment 124890 [details]
Quick hack

This patch keeps edit mode working. Downside: LMB action only works when applets are locked.
Comment 6 Pit 2020-01-04 10:42:11 UTC
Not really helpful TBH.  With locked widgets I cannot drop-paste stuff on the desktop using middle mouse button.

At least I could select which part of the desktop is broken :P
Comment 7 Franz Trischberger 2020-01-04 10:55:10 UTC
(In reply to Pit from comment #6)
> Not really helpful TBH.  With locked widgets I cannot drop-paste stuff on
> the desktop using middle mouse button.
> 
> At least I could select which part of the desktop is broken :P

Yep :)
I do not use that feature and didn't test it, so I didn't know I broke pasting notes. Sorry...
Comment 8 Franz Trischberger 2020-01-04 11:37:33 UTC
Need to take back my apology ;)
I installed plasma-workspace with my patch disabled and middlemouse click on a desktop with locked widgets does NOT paste a note. This works only in unlocked state it seems. I'm on 5.17.4, btw.
Comment 9 Pit 2020-01-04 13:27:52 UTC
Apologies - I didn't mean that your patch broke a feature.  
The 'feature' is that with locked widgets you cannot drop text notes on the desktop.  As your patch only works with locked widgets (as I understand) I can only choose to either lock them and not have paste, or unlock and don't have LMB.  Neither is really satisfying.

That aside - thanks for looking at the issue.
Comment 10 Patrick Silva 2020-01-29 00:35:35 UTC
Same thing on Plasma 5.18 beta.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.17.90
KDE Frameworks Version: 5.66.0
Qt Version: 5.14.1
Comment 11 Pit 2020-02-15 13:35:04 UTC
So a FULL minor release cycle, and no one fixes this.

And in 5.18, the hamburger menu is GONE.  So I now have NO WAY to change those settings anymore, as I had put the application launcher on the RMB and relied (had to) on that menu in the corner.

Are you thinking that a desktop environment doesn't need a working mouse?

The importance of this really needs to be raised to CRITICAL now with this menu removal.
Comment 12 Christoph Feck 2020-02-15 15:54:55 UTC
Does Alt+D work when the desktop has focus? (actually it should be Alt+D,Alt+S, but there is another bug that will be fixed with Plasma 5.18.1)
Comment 13 Pit 2020-02-15 17:06:12 UTC
Should that open the config menu?  But no, it doesn't do anything.

I'm using sloppy focus though.  However, I left-clicked in the Desktop before trying, and no other application seemed to catch that (any way to check?).

Ah no, Alt-D, Alt-S in sequence does indeed open the configuration window (Wallpaper/Mouse Actions) with some delay that I might have out-typed in the first test.  That's at least a workable solution to access that one.

FTR, this is plasma5-workspace-5.18.0 on openSUSE Tumbleweed 20200213
Comment 14 Franz Trischberger 2020-02-23 10:39:40 UTC
(In reply to Pit from comment #11)
> So a FULL minor release cycle, and no one fixes this.
Notmart is the dev who did most of the work to recent appletslayout changes. So I contacted him directly via mail (Jan. 29) and pointed him to this issue. Unfortunately he didn't reply or fix the issue. Probably another dev could contact him or just (co)assign him? Thx!
Comment 15 Patrick Silva 2020-02-29 12:11:48 UTC
*** Bug 418315 has been marked as a duplicate of this bug. ***
Comment 16 Nate Graham 2020-04-14 23:44:25 UTC
Works for me with git master. Can anyone using git master/neon deb unstable still reproduce the issue?
Comment 17 Patrick Silva 2020-04-15 01:53:41 UTC
works for me too.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.18.80
KDE Frameworks Version: 5.70.0
Qt Version: 5.14.1
Comment 18 Christoph Feck 2020-04-15 17:29:43 UTC
Hm, just updated Krypton, but still doesn't work. Is it a very recent commit (Krypton only updates once a day)?
Comment 19 Bug Janitor Service 2020-04-30 04:33:11 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 20 Pit 2020-04-30 06:56:55 UTC
So I just read through the thread again - WHAT info is needed?  

I'm on plasma 5.18.4, there the bug is still present.
Comment 21 Nate Graham 2020-04-30 13:32:46 UTC
Confirmation that it still doesn't work. Thanks for providing it.
Comment 22 Pit 2020-04-30 13:40:27 UTC
Mind, this is the official Tumbleweed package - I don't know if the mentioned fix in git has already propagated in the main tree?  But I can't compile myself to check....
Comment 23 Salil 2020-09-20 18:35:58 UTC
I can confirm that this issue is present in KDE in OpenSuse Tumbleweed. 
Information for package plasma5-session:
----------------------------------------
Repository     : Main Repository (OSS)
Name           : plasma5-session
Version        : 5.19.5-2.1
Arch           : noarch
Vendor         : openSUSE
Installed Size : 66.1 KiB
Installed      : Yes (automatically)
Status         : up-to-date
Source package : plasma5-workspace-5.19.5-2.1.src
Summary        : KDE Plasma 5 X11 Session
Description    : 
    This package contains the startup scripts necessary to start a KDE
    Plasma 5 session with X11 from a display manager.
Comment 24 ivan-kde 2022-08-18 20:50:04 UTC
Debian bug report https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=956506
(regression from Debian 10 to Debian 11)
Comment 25 ivan-kde 2022-08-18 21:02:09 UTC
Looks like this regressed sometime between plasma-desktop 5.13.1.1 through 5.14.5.1 (still working in all those versions) and plasma-desktop 5.17, FWIW.
Comment 26 Nate Graham 2022-09-21 18:25:43 UTC
*** Bug 423217 has been marked as a duplicate of this bug. ***
Comment 27 Arjen Hiemstra 2022-09-22 12:16:20 UTC
Git commit ff5b23b705c653fb364ac4a648f3c604905dec77 by Arjen Hiemstra.
Committed on 22/09/2022 at 12:08.
Pushed by ahiemstra into branch 'master'.

Only accept mouse press in appletslayout if something is in edit mode

Otherwise we block left mouse press from triggering containment actions.

M  +10   -0    components/containmentlayoutmanager/appletslayout.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/ff5b23b705c653fb364ac4a648f3c604905dec77
Comment 28 Arjen Hiemstra 2022-09-22 12:17:59 UTC
Git commit 79ff3870f17412f3eca155bd1c03b43838424fa5 by Arjen Hiemstra.
Committed on 22/09/2022 at 12:17.
Pushed by ahiemstra into branch 'Plasma/5.26'.

Only accept mouse press in appletslayout if something is in edit mode

Otherwise we block left mouse press from triggering containment actions.


(cherry picked from commit ff5b23b705c653fb364ac4a648f3c604905dec77)

M  +10   -0    components/containmentlayoutmanager/appletslayout.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/79ff3870f17412f3eca155bd1c03b43838424fa5