Only accept mouse press in appletslayout if something is in edit mode

Otherwise we block left mouse press from triggering containment actions.

BUG: 413104


(cherry picked from commit ff5b23b705c653fb364ac4a648f3c604905dec77)